[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
os-sys = "^2.1.4"
PyPDF2 = "^2.11.2"
spacy = "^3.4.3"
nltk = "^3.7"
[tool.poetry.dev-dependencies]
